--- a/components/CantLoginCard.module.css
+++ b/components/CantLoginCard.module.css
@@ -11,8 +11,9 @@ height: 100%;
     flex-direction: column;
     width:65%;
     height: 90%;
-    margin-top: 55px;
+    margin-top: 85px;
     justify-content: flex-start;
+    
     
    
 
@@ -28,11 +29,20 @@ height: 100%;
     justify-content: center;
     
 }
+.slink{
+    display: flex;
+    margin-top: 50px;
+    font-family:"Poppins" ;
+    font-style: normal;
+    font-weight: 800px;
+    font-size: 14px;
+    
+}
   .login{
     display: flex;
     margin-top: 10px;
     
-    width:200px;
+    width:250px;
     height: 50px;
     background-color: #8950FC;
     color: white;
@@ -51,20 +61,9 @@ height: 100%;
   .loginb{
       display: flex;
       justify-content: center;
+      margin-top: 20px;
   }
-  .remember{
-    margin-top: 20px;
-    
-}
-.remember input {
-  position: fixed;
-  border:0;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-  
-}
+
 .loginfooter{
     display: flex;
     width: 100%;
@@ -129,7 +128,16 @@ height: 100%;
     justify-content: flex-end;
 }
 .hrline{
+    margin-top: 30px;
+    
+
+}
+.loginfooterauthenticate{
+    display: flex;
+    width: 100%;
+    height: 10%;
     margin-top: 20px;
+    justify-content: space-between;
 }
 @media only screen and (max-width: 600px) {
     .containerlogincardin{
@@ -152,7 +160,7 @@ height: 100%;
         font-size: 9px;
     }
     .login{
-        width:100px;
+        width:150px;
         height: 30px;
         font-size: 9px;
       }
