--- a/components/LoginCard.module.css
+++ b/components/LoginCard.module.css
@@ -1,4 +1,5 @@
 .containerlogincard{
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,7 +12,7 @@ height: 100%;
     flex-direction: column;
     width:65%;
     height: 90%;
-    margin-top: 55px;
+    margin-top: 15%;
     justify-content: flex-start;
     
    
