--- a/components/LoginCard.module.css
+++ b/components/LoginCard.module.css
@@ -165,3 +165,10 @@ height: 100%;
         
     }
 }
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+    
+    .email1 TextField{
+        font-size: 16px !important;
+    }
+
+  }
