--- a/components/LoginCard.module.css
+++ b/components/LoginCard.module.css
@@ -44,6 +44,7 @@ height: 100%;
     font-weight: bold;
     line-height: 16px;
     border: solid;
+    border-width:1px;
   }
   .login:hover{
       cursor: pointer;
@@ -52,6 +53,7 @@ height: 100%;
   .loginb{
       display: flex;
       justify-content: center;
+      
   }
   .remember{
     margin-top: 20px;
@@ -165,10 +167,26 @@ height: 100%;
         
     }
 }
-@media screen and (-webkit-min-device-pixel-ratio:0) { 
-    
-    .email1 TextField{
-        font-size: 16px !important;
+
+  @media only screen and (max-height: 650px){
+    .containerlogincardin{
+        display: flex;
+        flex-direction: column;
+        margin-top: 0%;
+        width: 97%;
+        
     }
 
+    .email11{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .email1{
+
+        width:100%;
+        background-color: #FFFFFF;
+    }
   }
+        
+  
