--- a/pages/ResetPassword.module.css
+++ b/pages/ResetPassword.module.css
@@ -47,9 +47,11 @@
     display:flex;
     flex-direction: row;
     height:90%;
-    width: 71vw;
-    
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     min-height: 90%;
+    
     
 }
 .logincardh1{
@@ -155,8 +157,8 @@ font-size: 1.1vw;
 }
 .logincardhi2{
     display: flex;
-    flex-basis: 35%;
-    min-width: 35%;
+    
+    width: 20%;
     border: solid;
     border-color: whitesmoke;
     border-width: 1px;
@@ -177,14 +179,15 @@ font-size: 1.1vw;
     .logincardhi1{
         display: flex;
         
-        flex-basis: 40%;
+        flex-basis: 0%;
         
     
     }
     .logincardhi2{
         display: flex;
-        
-        flex-basis: 60%;
+        flex-basis: 50%;
+        width: 30%;
+        height: 90%;
         
     
     }
@@ -194,9 +197,10 @@ font-size: 1.1vw;
         
     
     }
+
     .footercardh1 img{
         height: auto;
-        width: 280px;
+        width: 30%;
       /* even more control with max-width */
         max-width: auto;
     }
@@ -209,3 +213,19 @@ font-size: 1.1vw;
     }
 
 } 
+@media only screen and (max-width: 600px){
+    .logincardhi2{
+        display: flex;
+        
+        flex-basis: 80%;
+        width: 20%;
+        height: 100%;
+        
+    
+    }
+        .footercard{
+        margin-top: 5vh;
+
+        
+    }
+}
