--- a/pages/ResetPassword.module.css
+++ b/pages/ResetPassword.module.css
@@ -216,7 +216,7 @@ font-size: 1.1vw;
 @media only screen and (max-width: 600px){
     .logincardhi2{
         display: flex;
-        
+        margin-top: 10%;
         flex-basis: 80%;
         width: 20%;
         height: 100%;
@@ -225,6 +225,23 @@ font-size: 1.1vw;
     }
         .footercard{
         margin-top: 5vh;
+
+        
+    }
+}
+@media only screen and (max-height: 600px){
+    .logincardhi2{
+        margin-top: 10%;
+        display: flex;
+        flex-basis: 80%;
+        height:110%;
+
+        
+        
+    
+    }
+    .footercard{
+        margin-top: 25vh;
 
         
     }
